# routes/index.js
@@ -6,6 +6,6 @@ router.use("/", require("./swagger"));
 router.use("/companies", require("./companies"));
 router.use("/users", require("./users"));
 router.use("/schools", require("./schools"));
-// router.use('/interviews', require('./interviews'));
+router.use('/interviews', require('./interviews'));
 
 module.exports = router;
