# swagger.json
@@ -7,33 +7,12 @@
   },
   "host": "interview-app-7mxc.onrender.com",
   "basePath": "/",
-  "tags": [
-    {
-      "name": "Home",
-      "description": "API Home Page"
-    },
-    {
-      "name": "Companies",
-      "description": "Hiring companies"
-    },
-    {
-      "name": "Users",
-      "description": "Operations about users"
-    },
-    {
-      "name": "Schools",
-      "description": "School information"
-    },
-    {
-      "name": "Interviews",
-      "description": "Interview process"
-    }
+  "schemes": [
+    "https"
   ],
-  "schemes": ["https"],
   "paths": {
     "/api-docs": {
       "get": {
-        "tags": ["Home"],
         "description": "",
         "responses": {
           "default": {
@@ -44,9 +23,10 @@
     },
     "/companies/": {
       "get": {
-        "tags": ["Companies"],
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -57,7 +37,6 @@
         }
       },
       "post": {
-        "tags": ["Companies"],
         "description": "Creating a single company in our database",
         "parameters": [
           {
@@ -103,7 +82,6 @@
     },
     "/companies/{id}": {
       "get": {
-        "tags": ["Companies"],
         "description": "",
         "parameters": [
           {
@@ -126,7 +104,6 @@
         }
       },
       "put": {
-        "tags": ["Companies"],
         "description": "Updating a single company in our database",
         "parameters": [
           {
@@ -179,7 +156,6 @@
         }
       },
       "delete": {
-        "tags": ["Companies"],
         "description": "Deleting a single company from our database",
         "parameters": [
           {
@@ -204,9 +180,10 @@
     },
     "/users/": {
       "get": {
-        "tags": ["Users"],
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -217,7 +194,6 @@
         }
       },
       "post": {
-        "tags": ["Users"],
         "description": "Creating a single user in our database",
         "parameters": [
           {
@@ -257,7 +233,6 @@
     },
     "/users/{id}": {
       "get": {
-        "tags": ["Users"],
         "description": "",
         "parameters": [
           {
@@ -280,7 +255,6 @@
         }
       },
       "put": {
-        "tags": ["Users"],
         "description": "Updating a single user in our database",
         "parameters": [
           {
@@ -327,7 +301,6 @@
         }
       },
       "delete": {
-        "tags": ["Users"],
         "description": "Deleting a single user from our database",
         "parameters": [
           {
@@ -352,9 +325,10 @@
     },
     "/schools/": {
       "get": {
-        "tags": ["Schools"],
         "description": "",
-        "produces": ["application/json"],
+        "produces": [
+          "application/json"
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -365,7 +339,6 @@
         }
       },
       "post": {
-        "tags": ["Schools"],
         "description": "Creating a single school in our database",
         "parameters": [
           {
@@ -402,7 +375,6 @@
     },
     "/schools/{id}": {
       "get": {
-        "tags": ["Schools"],
         "description": "",
         "parameters": [
           {
@@ -425,7 +397,6 @@
         }
       },
       "put": {
-        "tags": ["Schools"],
         "description": "Updating a single school in our database",
         "parameters": [
           {
@@ -469,7 +440,6 @@
         }
       },
       "delete": {
-        "tags": ["Schools"],
         "description": "Deleting a single school from our database",
         "parameters": [
           {
@@ -494,17 +464,21 @@
     },
     "/interviews/": {
       "get": {
-        "tags": ["Interviews"],
         "description": "",
+        "produces": [
+          null
+        ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "post": {
-        "tags": ["Interviews"],
-        "description": "",
+        "description": "Creating a single interview in our database",
         "responses": {
           "default": {
             "description": ""
@@ -514,7 +488,6 @@
     },
     "/interviews/{id}": {
       "get": {
-        "tags": ["Interviews"],
         "description": "",
         "parameters": [
           {
@@ -525,31 +498,65 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "put": {
-        "tags": ["Interviews"],
-        "description": "",
+        "description": "Updating a single interview in our database",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "companyName": {
+                  "example": "any"
+                },
+                "position": {
+                  "example": "any"
+                },
+                "location": {
+                  "example": "any"
+                },
+                "date": {
+                  "example": "any"
+                },
+                "time": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "400": {
+            "description": "Bad Request"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       },
       "delete": {
-        "tags": ["Interviews"],
-        "description": "",
+        "description": "Deleting a single interview from our database",
         "parameters": [
           {
             "name": "id",
@@ -559,8 +566,14 @@
           }
         ],
         "responses": {
-          "default": {
-            "description": ""
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
